Fixing issue with fixed header jumping

--- a/themes/linux/css/style.css
+++ b/themes/linux/css/style.css
@@ -2633,7 +2633,7 @@ select[size="1"] {
     background: -webkit-gradient(linear, left top, left bottom, color-stop(0, #666666), color-stop(1, black));
     border: 0;
     color: white;
-    font: 13px/17px "Lucida Grande", Arial, "Liberation Sans", FreeSans, sans-serif;
+    font: 13px / 17px "Lucida Grande", Arial, "Liberation Sans", FreeSans, sans-serif;
     overflow: hidden;
     padding: 15px 15px 17px;
     text-shadow: black 0 0 1px;
@@ -5137,11 +5137,13 @@ a {
     #header-wrapper.fixed {
       position: fixed;
       z-index: 999;
-      top: -140px;
+      top: 0px;
       width: 100%;
       border-bottom: 1px solid #e5e5e5;
       background: rgba(255, 255, 255, 0.95);
       padding: 0; }
+      #header-wrapper.fixed .ad-space {
+        display: none; }
       #header-wrapper.fixed #block-panels-mini-global-header {
         border: 0;
         height: 48px; } }
@@ -5409,7 +5411,7 @@ a {
   @media (min-width: 62.125em) {
     #content-wrapper.fixed,
     #panel-wrapper.fixed {
-      padding-top: 205px; } }
+      padding-top: 190px; } }
 
 #footer-wrapper {
   margin: 0;
